Add missing tvly string back in for now
Should probably be abstracted in a better way.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2995,4 +2995,7 @@
     <!-- Dialog positive button message -->
     <string name="yes">Yes</string>
 
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.\n%s</string>
+
 </resources>
